maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:51: error: '<-' expected but ')' found.
    for ((a,b) in nextCase) {
                          ^ShortestPathMaze:55: error: illegal start of simple expression
  }
  ^